Added profile pages outline

--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 <div class="heading">Coding Club</div>
 
 <ul class="navbar">
-  <li class="navtab"><a class="active" href="./index.html">Home</a></li>
-  <li class="navtab"><a href="./Pages/News.html">News</a></li>
-  <li class="navtab"><a href="./Pages/About.html">About</a></li>
+  <li><a class="active" href="./index.html">Home</a></li>
+  <li><a href="./Pages/News.html">News</a></li>
+  <li><a href="./Pages/About.html">About</a></li>
+  <li><a href="./Pages/People.html">People</a></li>
 </ul>
 
 <div class="row">
@@ -45,7 +46,6 @@
 
 <div class="footer">
   <p>Footer things go here</p>
-
 </div>
 
 <script src="script.js"></script>
