--- a/Pages/Join.html
+++ b/Pages/Join.html
@@ -12,7 +12,8 @@
 <div class="heading">Coding Club</div>
 
 <ul class="navbar">
-  <li class="navtab"><a href="../index.html">Home</a></li>
-  <li class="navtab"><a href="./News.html">News</a></li>
-  <li class="navtab"><a href="./About.html">About</a></li>
+  <li><a href="../index.html">Home</a></li>
+  <li><a href="./News.html">News</a></li>
+  <li><a href="./About.html">About</a></li>
+  <li><a href="./People.html">People</a></li>
 </ul>
