--- a/Pages/Profiles/RyanBarnard.html
+++ b/Pages/Profiles/RyanBarnard.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Ryan's Resume</title>
+  <title>Coding Club</title>
   <link rel="stylesheet" href="../../style.css">
 </head>
 
@@ -17,3 +17,5 @@
   <li><a href="../About.html">About</a></li>
   <li><a href="../People.html">People</a></li>
 </ul>
+
+<h2>Ryan Barnard</h2>
