Added Hibbs picture and added Weekly Problem tab

--- a/Pages/People.html
+++ b/Pages/People.html
@@ -35,3 +35,19 @@
     </div>
   </li>
 </ul>
+<ul class="profile">
+  <li>
+    <div class="vertical-center">
+      <img src="../Images/Hibbs.jpg">
+    </div>
+    <div class="container">
+      <p>
+        <a href="./Profiles/RyanHibbs.html">Ryan Hibbs</a>
+      </p>
+      <p>
+        Ryan is a senior at The College of Idaho pursuing majors in both Computer Science and Business Administration. 
+        He is a member of the Coding Club, The Gipson Honors Program and also plays on the Yote Football Team.
+      </p>
+    </div>
+  </li>
+</ul>
