--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <li><a href="./Pages/News.html">News</a></li>
   <li><a href="./Pages/About.html">About</a></li>
   <li><a href="./Pages/People.html">People</a></li>
+  <li><a href="./Pages/Problem.html">Weekly Problem</a></li>
 </ul>
 
 <div class="row">
