--- a/Pages/About.html
+++ b/Pages/About.html
@@ -17,3 +17,7 @@
   <li><a class="active" href="./About.html">About</a></li>
   <li><a href="./People.html">People</a></li>
 </ul>
+
+<p>
+  This is a paragraph that Yousef wrote.
+</p>
