--- a/Pages/Join.html
+++ b/Pages/Join.html
@@ -16,4 +16,5 @@
   <li><a href="./News.html">News</a></li>
   <li><a href="./About.html">About</a></li>
   <li><a href="./People.html">People</a></li>
+  <li><a href="./Problem.html">Weekly Problem</a></li>
 </ul>
