--- a/Pages/Problem.html
+++ b/Pages/Problem.html
@@ -13,8 +13,9 @@
 
 <ul class="navbar">
   <li><a href="../index.html">Home</a></li>
-  <li><a class="active" href="./News.html">News</a></li>
+  <li><a href="./News.html">News</a></li>
   <li><a href="./About.html">About</a></li>
   <li><a href="./People.html">People</a></li>
+  <li><a class="active" href="./Problem.html">Weekly Problem</a></li>
 </ul>
 <h2>This is a spot to put the coding problem for the week</h2>
