--- a/Pages/People.html
+++ b/Pages/People.html
@@ -16,6 +16,7 @@
   <li><a href="./News.html">News</a></li>
   <li><a href="./About.html">About</a></li>
   <li><a class="active" href="./People.html">People</a></li>
+  <li><a href="./Problem.html">Weekly Problem</a></li>
 </ul>
 
 <ul class="profile">
